--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,9 @@
 /****************************************************FOOTER*************************************************************/
 @import "footer";
 /***********************************************************************************************************************/
+/****************************************************MINI_FOOTER********************************************************/
+@import "mini_footer";
+/***********************************************************************************************************************/
 
 html, body {
   height: 100%;
