--- a/css/footer.css
+++ b/css/footer.css
@@ -7,6 +7,9 @@
   background-size: cover;
   margin-top: 40px;
   padding-top: 23px; }
+  @media (max-width: 700px) {
+    .footer {
+      display: none; } }
   .footer .content {
     clear: both;
     position: relative; }
