--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -18,6 +18,9 @@
   background-size: cover;
   margin-top: 40px;
   padding-top: 23px;
+  @media(max-width: 700px){
+    display: none;
+  }
   .content {
     clear: both;
     position: relative;
