Добавлена логика сворачивания подменю при выходе курсора  за блок

--- a/css/modal.css
+++ b/css/modal.css
@@ -90,6 +90,9 @@
       letter-spacing: -0.8px;
       margin-top: 8px; }
 
+.podmenu {
+  width: 100%; }
+
 .brend_block {
   position: absolute;
   top: 0px;
