--- a/css/style.css
+++ b/css/style.css
@@ -1172,6 +1172,8 @@ table {
       text-decoration: underline;
       color: #003c95;
       box-sizing: border-box; }
+      .brend_block_footer_brend_all:hover {
+        color: #620909; }
       .brend_block_footer_brend_all span {
         display: block;
         font-weight: bold;
@@ -1339,6 +1341,10 @@ table {
       margin-right: 9px;
       box-sizing: border-box;
       padding: 0px 8px; }
+      .area_block_inverter_block:hover {
+        border-color: #003c95; }
+        .area_block_inverter_block:hover a {
+          color: #620909; }
       .area_block_inverter_block_name {
         width: 100%;
         font: 12px/14px Arial;
@@ -1410,6 +1416,8 @@ table {
         text-decoration: underline;
         letter-spacing: 0.4px;
         margin-top: 14px; }
+      .price_block_link_block:hover p {
+        color: #620909; }
     .price_block_link_retail {
       display: block; }
       .price_block_link_retail img {
@@ -1510,6 +1518,10 @@ table {
       text-align: center;
       margin-top: 44px;
       border: 1px solid #7696bd; }
+      .multi_block_box_zag:hover {
+        color: #840000;
+        border-color: #840000;
+        background: rgba(241, 240, 221, 0.9); }
     .multi_block_box_link_power {
       width: 100%;
       margin-top: 14px;
@@ -1690,6 +1702,8 @@ table {
     .services_block_link_box_price {
       display: block;
       min-height: 126px; }
+      .services_block_link_box_price:hover a {
+        color: #620909; }
       .services_block_link_box_price img {
         margin-top: -24px; }
     .services_block_link_box_spec {
@@ -1796,6 +1810,8 @@ table {
       display: inline-block;
       margin-right: 8%;
       text-decoration: underline; }
+      .question_block_link a:hover {
+        color: #620909; }
   .question_block_slider_wrap {
     width: 533px;
     height: 231px;
@@ -7253,10 +7269,16 @@ html, body {
     right: -19.5px;
     background-image: url("../img/sprite_header.png");
     background-position: -110px -64px; }
+    .wraper .slick-next:hover {
+      background-image: url("../img/temp_hover/next_hover.png");
+      background-position: center; }
   .wraper .slick-prev {
     left: -19.5px;
     background-image: url("../img/sprite_header.png");
     background-position: -149px -64px; }
+    .wraper .slick-prev:hover {
+      background-image: url("../img/temp_hover/prev_hover.png");
+      background-position: center; }
 
 .content {
   width: 100%;
