--- a/sass/style.scss
+++ b/sass/style.scss
@@ -57,11 +57,19 @@ html, body {
     right: -19.5px;
     background-image: url("../img/sprite_header.png");
     background-position: -110px -64px;
+    &:hover{
+      background-image: url("../img/temp_hover/next_hover.png");
+      background-position: center;
+    }
   }
   .slick-prev {
     left: -19.5px;
     background-image: url("../img/sprite_header.png");
     background-position: -149px -64px;
+    &:hover{
+      background-image: url("../img/temp_hover/prev_hover.png");
+      background-position: center;
+    }
   }
 }
 
