--- a/css/schem.css
+++ b/css/schem.css
@@ -40,12 +40,9 @@
 .schem_big_block {
   position: absolute;
   top: 50%;
-  margin-top: -300px;
   left: 50%;
-  margin-left: -400px;
   width: 100%;
-  max-width: 800px;
-  max-height: 600px;
+  max-width: 700px;
   background: #FFFFFF;
   padding: 15px;
   box-sizing: border-box;
@@ -107,7 +104,8 @@
       display: table-cell;
       vertical-align: middle;
       background: #C0C0C0;
-      text-align: center; }
+      text-align: center;
+      height: 500px; }
       .schem_big_block__schem_block_img_block #schem1 {
         display: inline-block; }
       .schem_big_block__schem_block_img_block img {
@@ -141,6 +139,9 @@
       .schem_big_block .scheme_close, .schem_big_block .map_close {
         top: 15px; } }
 
-.map_block #map {
-  width: 100%;
-  height: 100%; }
+.map_block {
+  width: 700px;
+  height: 550px; }
+  .map_block #map {
+    width: 100%;
+    height: 100%; }
