--- a/css/style.css
+++ b/css/style.css
@@ -1674,6 +1674,43 @@ table {
         .multi_block_multi_kalcul:hover a {
           color: #840000; }
 
+.foto_block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 700px;
+  background: #FFFFFF;
+  border: 1px solid #014366;
+  -webkit-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
+  padding: 18px;
+  box-sizing: border-box;
+  z-index: 99999;
+  display: none; }
+  .foto_block img {
+    width: 100%; }
+  .foto_block .close_foto {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center;
+    z-index: 999; }
+    .foto_block .close_foto i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
+
 .services_block {
   position: absolute;
   top: 0;
@@ -4889,12 +4926,9 @@ table {
 .schem_big_block {
   position: absolute;
   top: 50%;
-  margin-top: -300px;
   left: 50%;
-  margin-left: -400px;
   width: 100%;
-  max-width: 800px;
-  max-height: 600px;
+  max-width: 700px;
   background: #FFFFFF;
   padding: 15px;
   box-sizing: border-box;
@@ -4956,7 +4990,8 @@ table {
       display: table-cell;
       vertical-align: middle;
       background: #C0C0C0;
-      text-align: center; }
+      text-align: center;
+      height: 500px; }
       .schem_big_block__schem_block_img_block #schem1 {
         display: inline-block; }
       .schem_big_block__schem_block_img_block img {
@@ -4990,9 +5025,12 @@ table {
       .schem_big_block .scheme_close, .schem_big_block .map_close {
         top: 15px; } }
 
-.map_block #map {
-  width: 100%;
-  height: 100%; }
+.map_block {
+  width: 700px;
+  height: 550px; }
+  .map_block #map {
+    width: 100%;
+    height: 100%; }
 
 /***********************************************************************************************************************/
 /****************************************************SECTION_price******************************************************/
