--- a/sass/schem.scss
+++ b/sass/schem.scss
@@ -56,12 +56,9 @@
 .schem_big_block {
   position: absolute;
   top: 50%;
-  margin-top: -300px;
   left: 50%;
-  margin-left: -400px;
   width: 100%;
-  max-width: 800px;
-  max-height: 600px;
+  max-width: 700px;
   background: #FFFFFF;
   padding: 15px;
   box-sizing: border-box;
@@ -131,6 +128,7 @@
       vertical-align: middle;
       background: #C0C0C0;
       text-align: center;
+      height: 500px;
       #schem1{
         display: inline-block;
       }
@@ -173,7 +171,8 @@
 }
 
 .map_block {
-
+width: 700px;
+  height: 550px;
   #map {
     width: 100%;
     height: 100%;
